[gd_scene load_steps=9 format=3 uid="uid://c3ugq5q5pks6i"]

[ext_resource type="Script" path="res://menu_minijogos.gd" id="1_0f5mc"]
[ext_resource type="Theme" uid="uid://d1cnbnfmrwwxq" path="res://Jubafault.tres" id="2_g6cho"]
[ext_resource type="AudioStream" uid="uid://bp42rpwk2nywv" path="res://audios/Modern9.mp3" id="3_8ukpn"]
[ext_resource type="AudioStream" uid="uid://xco1rcontbvu" path="res://audios/Wood Block3.mp3" id="4_78ax6"]
[ext_resource type="AudioStream" uid="uid://ckijsql783mku" path="res://audios/Modern1.mp3" id="5_c2jo1"]

[sub_resource type="Animation" id="Animation_0bolb"]
resource_name = "TransIn"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:transform")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.217638, 0.217638),
"update": 0,
"values": [Transform2D(1, 0, 0, 1, 0, -1500), Transform2D(1, 0, 0, 1, 0, 0)]
}

[sub_resource type="Animation" id="Animation_4tfuu"]
resource_name = "TransOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(2.37842, 2.37842),
"update": 0,
"values": [Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 2000)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r6cq8"]
_data = {
"TransIn": SubResource("Animation_0bolb"),
"TransOut": SubResource("Animation_4tfuu")
}

[node name="menu_minijogos" type="CanvasLayer"]
process_mode = 3
offset = Vector2(0, -1500)
transform = Transform2D(1, 0, 0, 1, 0, -1500)
script = ExtResource("1_0f5mc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r6cq8")
}

[node name="Panel" type="Panel" parent="."]
offset_left = 46.0
offset_top = 40.0
offset_right = 1873.0
offset_bottom = 1022.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Fechar" type="Button" parent="."]
offset_left = 1589.0
offset_top = 66.0
offset_right = 1849.0
offset_bottom = 158.0
theme = ExtResource("2_g6cho")
text = "fechar"

[node name="VerPontuacao" type="Button" parent="."]
offset_left = 1216.0
offset_top = 66.0
offset_right = 1476.0
offset_bottom = 158.0
theme = ExtResource("2_g6cho")
text = "Scores"

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Titulo" type="Label" parent="Control"]
layout_mode = 0
offset_left = 96.0
offset_top = 76.0
offset_right = 772.0
offset_bottom = 179.0
theme_override_font_sizes/font_size = 75
text = "Jogos Disponíveis"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Passaro" type="Button" parent="Control"]
layout_mode = 0
offset_left = 160.0
offset_top = 324.0
offset_right = 695.0
offset_bottom = 428.0
theme_override_font_sizes/font_size = 70
text = "Pássaro Voador"

[node name="Cobrinha" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 280.0
offset_top = 332.0
offset_right = 588.0
offset_bottom = 436.0
theme_override_font_sizes/font_size = 70
text = "cobrinha"

[node name="CandyCrush" type="Button" parent="Control"]
layout_mode = 0
offset_left = 184.0
offset_top = 620.0
offset_right = 652.0
offset_bottom = 724.0
theme_override_font_sizes/font_size = 70
text = "Alien Espacial"

[node name="QuebraCabeca" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 184.0
offset_top = 700.0
offset_right = 687.0
offset_bottom = 804.0
theme_override_font_sizes/font_size = 70
text = "puzzle
"

[node name="Labirinto" type="Button" parent="Control"]
visible = false
layout_mode = 0
offset_left = 1232.0
offset_top = 708.0
offset_right = 1735.0
offset_bottom = 812.0
theme_override_font_sizes/font_size = 70
text = "labirinto"

[node name="ControlScore" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="ControlScore"]
layout_mode = 0
offset_left = 80.0
offset_top = 220.0
offset_right = 1840.0
offset_bottom = 996.0
theme_override_constants/separation = 150

[node name="VBoxCobra" type="VBoxContainer" parent="ControlScore/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Titulo" type="Label" parent="ControlScore/HBoxContainer/VBoxCobra"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Cobra
"

[node name="Score" type="Label" parent="ControlScore/HBoxContainer/VBoxCobra"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1. 0 pontos"

[node name="VBoxPassaro" type="VBoxContainer" parent="ControlScore/HBoxContainer"]
layout_mode = 2

[node name="Titulo" type="Label" parent="ControlScore/HBoxContainer/VBoxPassaro"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Pássaro Voador"

[node name="VBoxCandy" type="VBoxContainer" parent="ControlScore/HBoxContainer"]
layout_mode = 2

[node name="Titulo" type="Label" parent="ControlScore/HBoxContainer/VBoxCandy"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Alien Espacial"

[node name="VBoxLabirinto" type="VBoxContainer" parent="ControlScore/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Titulo" type="Label" parent="ControlScore/HBoxContainer/VBoxLabirinto"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Labirinto"

[node name="Score" type="Label" parent="ControlScore/HBoxContainer/VBoxLabirinto"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1. 0 pontos
"

[node name="VBoxQuebraCabeca" type="VBoxContainer" parent="ControlScore/HBoxContainer"]
visible = false
layout_mode = 2

[node name="Titulo" type="Label" parent="ControlScore/HBoxContainer/VBoxQuebraCabeca"]
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Puzzle
"

[node name="Score" type="Label" parent="ControlScore/HBoxContainer/VBoxQuebraCabeca"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "1. 0 pontos"

[node name="AudioErro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_8ukpn")

[node name="AudioSucesso" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_78ax6")

[node name="AudioNormal" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_c2jo1")

[connection signal="pressed" from="Fechar" to="." method="_on_fechar_pressed"]
[connection signal="pressed" from="VerPontuacao" to="." method="_on_ver_pontuacao_pressed"]
[connection signal="pressed" from="Control/Passaro" to="." method="_on_passaro_pressed"]
[connection signal="pressed" from="Control/Cobrinha" to="." method="_on_cobrinha_pressed"]
[connection signal="pressed" from="Control/CandyCrush" to="." method="_on_candy_crush_pressed"]
[connection signal="pressed" from="Control/QuebraCabeca" to="." method="_on_quebra_cabeca_pressed"]
[connection signal="pressed" from="Control/Labirinto" to="." method="_on_labirinto_pressed"]
